# MRL_LabelTool

./: .gitignore  CMakeLists.txt  README.md
GUITool/: CMakeLists.txt
GUITool/include/: imgui_header.h
GUITool/include/LabelHandler/: LabelController.cpp  LabelController.h  show_label_window.cpp  show_label_window.h
GUITool/include/Label_handler/: LabelController.cpp  LabelController.h  show_label_window.cpp
GUITool/include/SimulationHandler/: SimulationController.cpp  SimulationController.h  show_simulation_window.cpp
GUITool/include/WindowsHandler/: Controller.cpp  Controller.h  show_control_window.h
GUITool/include/simulation_handler/: show_simulation_window.cpp  show_simulation_window.h
GUITool/include/windows_handler/: Controller.cpp  show_control_window.cpp
GUITool/src/: tool.cpp
Model/: normalize.cpp  normalize.h
Model/adaboost/: adaboost.h
Model/logistic/: logistic.cpp  logistic.h
Training/: CMakeLists.txt
dataset/binary_data/: feature_bin.txt  feature_num_bin.txt  label_bin.txt  label_num_bin.txt
dataset/demo_data/: default_test_x.txt  default_test_y.txt  default_train_x.txt  default_train_y.txt
dataset/weight_data/: adaboost_ball_weight.txt  adaboost_box_weight.txt
icon/: MesIcon.rc
include/: file_handler.cpp  file_handler.h  make_feature.cpp  make_feature.h  metric.cpp  metric.h
src/: training.cpp
