cmake_minimum_required(VERSION 3.11)
project(MRL_LabelTool)

set(CMAKE_CXX_STANDARD 20)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

if(WIN32)
  if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    MESSAGE("==================== USING MSVC TO COMILE ====================")
    add_compile_options(/wd4819 /wd4244 /wd4267 /wd4305 "/Zc:__cplusplus")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
    set(APP_ICON_RESOURCE_WINDOWS "${CMAKE_CURRENT_SOURCE_DIR}/icon/MesIcon.rc")
    set(CMAKE_CXX_FLAGS_DEBUG "/O2")
    set(CMAKE_CXX_FLAGS_RELEASE "/O2")
  else()
    MESSAGE("==================== USING MINGW TO COMILE ====================")
    set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wa,-mbig-obj") # mingw compile flag (the output was weird idk why).
    set(CMAKE_CXX_FLAGS_DEBUG "-O3")
    set(CMAKE_CXX_FLAGS_RELEASE "-O3")
  endif()
else()
  set(CMAKE_CXX_FLAGS "-Wall -Wextra")
  set(CMAKE_CXX_FLAGS_DEBUG "-g -O3")
  set(CMAKE_CXX_FLAGS_RELEASE "-O3")
endif()
  
set(PROJECT_HEADER ${CMAKE_SOURCE_DIR}/include)
set(MODEL_DIR ${CMAKE_SOURCE_DIR}/Model)
set(THIRD_DIR ${CMAKE_SOURCE_DIR}/3rdparty)
set(EIGEN3_INCLUDE_DIRS ${THIRD_DIR}/Eigen)

set(GUITOOL_DIR ${CMAKE_SOURCE_DIR}/GUITool)
set(TRAINING_DIR ${CMAKE_SOURCE_DIR}/Training)

add_subdirectory(${THIRD_DIR})
add_subdirectory(${GUITOOL_DIR})
add_subdirectory(${TRAINING_DIR})